resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-http
  labels:
    app: python-http
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-http
  template:
    metadata:
      name: python-http
      labels:
        app: python-http
    spec:
      containers:
        - name: http-server
          image: rdeville/python-http:3.16
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: config
              mountPath: "/app/index.html"
              subPath: index.html
      volumes:
      - name: config
        configMap:
          name: python-http-index
