resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-python-http
spec:
  selector:
    app: python-http
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
